# bishop

./: Cargo.toml
lazy-datafusion/: Cargo.toml
lazy-datafusion/src/: lib.rs
mongodb-arrow/: Cargo.toml
mongodb-arrow/src/: bson_ext.rs  lib.rs
mongodb-datafusion/: Cargo.toml
mongodb-datafusion/src/: datasource.rs
src/: bson_ext.rs  main.rs
src/datasource/: mongodb.rs
src/datasource/mongodb/: reader.rs
