[package]
name = "bishop"
version = "0.1.0"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2018"

[dependencies]
arc-swap = "1"
arrow = "3"
async-trait = "0.1"
datafusion = "3"
futures = "0.3"
mongodb = "1"
pin-project = "1"
rustyline = "7"
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tokio = "0.2"
