[package]
name = "bishop"
version = "0.1.0"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2018"

[workspace]
members = ["lazy-datafusion", "mongodb-arrow", "mongodb-datafusion"]

[dependencies]
arc-swap = "1"
arrow = "3"
async-trait = "0.1"
datafusion = "3"
futures = "0.3"
lazy-datafusion = { path = "lazy-datafusion" }
mongodb = "1"
mongodb-datafusion = { path = "mongodb-datafusion" }
pin-project = "1"
rustyline = "7"
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tokio = "0.2"
